mttthird/VirtualMachine1/src/virtualMachineParser.java
// Generated from virtualMachine.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class virtualMachineParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SC=1, ENTER=2, CLASS=3, MAIN=4, ARGS=5, NAME=6, MODIFICATOR=7, LCB=8, 
		RCB=9, LB=10, RB=11, TYPE=12, RETURN_TYPE=13, FOR=14, WHILE=15, IF=16, 
		ELSE=17, DIGIT=18, VAR=19, ASSIGN=20, PLUS=21, MINUS=22, ARITHM1=23, CMP=24, 
		AND=25, OR=26, UNOT=27, TRUE=28, FALSE=29, INC=30, DEC=31, WS=32;
	public static final int
		RULE_start = 0, RULE_class_ = 1, RULE_section = 2, RULE_param = 3, RULE_main = 4, 
		RULE_for_ = 5, RULE_while_ = 6, RULE_if_ = 7, RULE_thensection = 8, RULE_whilesection = 9, 
		RULE_elsesection = 10, RULE_assign = 11, RULE_math = 12, RULE_term = 13, 
		RULE_logic = 14, RULE_num = 15, RULE_bool = 16, RULE_inc = 17, RULE_dec = 18;
	public static final String[] ruleNames = {
		"start", "class_", "section", "param", "main", "for_", "while_", "if_", 
		"thensection", "whilesection", "elsesection", "assign", "math", "term", 
		"logic", "num", "bool", "inc", "dec"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", null, "'class'", "'main'", "'String[] args'", null, null, 
		"'{'", "'}'", "'('", "')'", null, null, "'for'", "'while'", "'if'", "'else'", 
		null, null, null, "'+'", "'-'", null, null, "'&&'", "'||'", "'!'", "'true'", 
		"'false'", "'++'", "'--'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SC", "ENTER", "CLASS", "MAIN", "ARGS", "NAME", "MODIFICATOR", "LCB", 
		"RCB", "LB", "RB", "TYPE", "RETURN_TYPE", "FOR", "WHILE", "IF", "ELSE", 
		"DIGIT", "VAR", "ASSIGN", "PLUS", "MINUS", "ARITHM1", "CMP", "AND", "OR", 
		"UNOT", "TRUE", "FALSE", "INC", "DEC", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "virtualMachine.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public virtualMachineParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public Class_Context class_() {
			return getRuleContext(Class_Context.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			class_();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_Context extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(virtualMachineParser.CLASS, 0); }
		public TerminalNode NAME() { return getToken(virtualMachineParser.NAME, 0); }
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public List<TerminalNode> MODIFICATOR() { return getTokens(virtualMachineParser.MODIFICATOR); }
		public TerminalNode MODIFICATOR(int i) {
			return getToken(virtualMachineParser.MODIFICATOR, i);
		}
		public Class_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterClass_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitClass_(this);
		}
	}

	public final Class_Context class_() throws RecognitionException {
		Class_Context _localctx = new Class_Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MODIFICATOR) {
				{
				{
				setState(40);
				match(MODIFICATOR);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(CLASS);
			setState(47);
			match(NAME);
			setState(48);
			section();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(virtualMachineParser.LCB, 0); }
		public List<TerminalNode> ENTER() { return getTokens(virtualMachineParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(virtualMachineParser.ENTER, i);
		}
		public TerminalNode RCB() { return getToken(virtualMachineParser.RCB, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitSection(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(LCB);
			setState(51);
			match(ENTER);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << MODIFICATOR) | (1L << LB) | (1L << TYPE) | (1L << RETURN_TYPE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << DIGIT) | (1L << VAR) | (1L << MINUS))) != 0)) {
				{
				{
				setState(52);
				param();
				setState(53);
				match(ENTER);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public Class_Context class_() {
			return getRuleContext(Class_Context.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public While_Context while_() {
			return getRuleContext(While_Context.class,0);
		}
		public For_Context for_() {
			return getRuleContext(For_Context.class,0);
		}
		public If_Context if_() {
			return getRuleContext(If_Context.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public IncContext inc() {
			return getRuleContext(IncContext.class,0);
		}
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		try {
			setState(71);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				class_();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				main();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				math(0);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				while_();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				for_();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				if_();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(68);
				assign();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(69);
				inc();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(70);
				dec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode RETURN_TYPE() { return getToken(virtualMachineParser.RETURN_TYPE, 0); }
		public TerminalNode MAIN() { return getToken(virtualMachineParser.MAIN, 0); }
		public TerminalNode LB() { return getToken(virtualMachineParser.LB, 0); }
		public TerminalNode ARGS() { return getToken(virtualMachineParser.ARGS, 0); }
		public TerminalNode RB() { return getToken(virtualMachineParser.RB, 0); }
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public List<TerminalNode> MODIFICATOR() { return getTokens(virtualMachineParser.MODIFICATOR); }
		public TerminalNode MODIFICATOR(int i) {
			return getToken(virtualMachineParser.MODIFICATOR, i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MODIFICATOR) {
				{
				{
				setState(73);
				match(MODIFICATOR);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(RETURN_TYPE);
			setState(80);
			match(MAIN);
			setState(81);
			match(LB);
			setState(82);
			match(ARGS);
			setState(83);
			match(RB);
			setState(84);
			section();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_Context extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(virtualMachineParser.FOR, 0); }
		public TerminalNode LB() { return getToken(virtualMachineParser.LB, 0); }
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public IncContext inc() {
			return getRuleContext(IncContext.class,0);
		}
		public TerminalNode RB() { return getToken(virtualMachineParser.RB, 0); }
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public For_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterFor_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitFor_(this);
		}
	}

	public final For_Context for_() throws RecognitionException {
		For_Context _localctx = new For_Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_for_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(FOR);
			setState(87);
			match(LB);
			setState(88);
			assign();
			setState(89);
			logic();
			setState(90);
			inc();
			setState(91);
			match(RB);
			setState(92);
			section();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_Context extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(virtualMachineParser.WHILE, 0); }
		public TerminalNode LB() { return getToken(virtualMachineParser.LB, 0); }
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public TerminalNode RB() { return getToken(virtualMachineParser.RB, 0); }
		public WhilesectionContext whilesection() {
			return getRuleContext(WhilesectionContext.class,0);
		}
		public While_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterWhile_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitWhile_(this);
		}
	}

	public final While_Context while_() throws RecognitionException {
		While_Context _localctx = new While_Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_while_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(WHILE);
			setState(95);
			match(LB);
			setState(96);
			logic();
			setState(97);
			match(RB);
			setState(98);
			whilesection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_Context extends ParserRuleContext {
		public TerminalNode IF() { return getToken(virtualMachineParser.IF, 0); }
		public TerminalNode LB() { return getToken(virtualMachineParser.LB, 0); }
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public TerminalNode RB() { return getToken(virtualMachineParser.RB, 0); }
		public ThensectionContext thensection() {
			return getRuleContext(ThensectionContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(virtualMachineParser.ELSE, 0); }
		public ElsesectionContext elsesection() {
			return getRuleContext(ElsesectionContext.class,0);
		}
		public If_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterIf_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitIf_(this);
		}
	}

	public final If_Context if_() throws RecognitionException {
		If_Context _localctx = new If_Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(IF);
			setState(101);
			match(LB);
			setState(102);
			logic();
			setState(103);
			match(RB);
			setState(104);
			thensection();
			setState(107);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(105);
				match(ELSE);
				setState(106);
				elsesection();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThensectionContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(virtualMachineParser.LCB, 0); }
		public List<TerminalNode> ENTER() { return getTokens(virtualMachineParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(virtualMachineParser.ENTER, i);
		}
		public TerminalNode RCB() { return getToken(virtualMachineParser.RCB, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ThensectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_thensection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterThensection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitThensection(this);
		}
	}

	public final ThensectionContext thensection() throws RecognitionException {
		ThensectionContext _localctx = new ThensectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_thensection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LCB);
			setState(110);
			match(ENTER);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << MODIFICATOR) | (1L << LB) | (1L << TYPE) | (1L << RETURN_TYPE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << DIGIT) | (1L << VAR) | (1L << MINUS))) != 0)) {
				{
				{
				setState(111);
				param();
				setState(112);
				match(ENTER);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhilesectionContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(virtualMachineParser.LCB, 0); }
		public List<TerminalNode> ENTER() { return getTokens(virtualMachineParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(virtualMachineParser.ENTER, i);
		}
		public TerminalNode RCB() { return getToken(virtualMachineParser.RCB, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public WhilesectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whilesection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterWhilesection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitWhilesection(this);
		}
	}

	public final WhilesectionContext whilesection() throws RecognitionException {
		WhilesectionContext _localctx = new WhilesectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whilesection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LCB);
			setState(122);
			match(ENTER);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << MODIFICATOR) | (1L << LB) | (1L << TYPE) | (1L << RETURN_TYPE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << DIGIT) | (1L << VAR) | (1L << MINUS))) != 0)) {
				{
				{
				setState(123);
				param();
				setState(124);
				match(ENTER);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsesectionContext extends ParserRuleContext {
		public TerminalNode LCB() { return getToken(virtualMachineParser.LCB, 0); }
		public List<TerminalNode> ENTER() { return getTokens(virtualMachineParser.ENTER); }
		public TerminalNode ENTER(int i) {
			return getToken(virtualMachineParser.ENTER, i);
		}
		public TerminalNode RCB() { return getToken(virtualMachineParser.RCB, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ElsesectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsesection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterElsesection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitElsesection(this);
		}
	}

	public final ElsesectionContext elsesection() throws RecognitionException {
		ElsesectionContext _localctx = new ElsesectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_elsesection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(LCB);
			setState(134);
			match(ENTER);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << MODIFICATOR) | (1L << LB) | (1L << TYPE) | (1L << RETURN_TYPE) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << DIGIT) | (1L << VAR) | (1L << MINUS))) != 0)) {
				{
				{
				setState(135);
				param();
				setState(136);
				match(ENTER);
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(virtualMachineParser.TYPE, 0); }
		public TerminalNode VAR() { return getToken(virtualMachineParser.VAR, 0); }
		public TerminalNode ASSIGN() { return getToken(virtualMachineParser.ASSIGN, 0); }
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public TerminalNode SC() { return getToken(virtualMachineParser.SC, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(145);
				match(TYPE);
				setState(146);
				match(VAR);
				}
				break;
			case 2:
				{
				setState(147);
				match(TYPE);
				setState(148);
				match(VAR);
				setState(149);
				match(ASSIGN);
				setState(150);
				math(0);
				}
				break;
			case 3:
				{
				setState(151);
				match(VAR);
				setState(152);
				match(ASSIGN);
				setState(153);
				math(0);
				}
				break;
			}
			setState(157);
			_la = _input.LA(1);
			if (_la==SC) {
				{
				setState(156);
				match(SC);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<MathContext> math() {
			return getRuleContexts(MathContext.class);
		}
		public MathContext math(int i) {
			return getRuleContext(MathContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(virtualMachineParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(virtualMachineParser.MINUS, 0); }
		public MathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).enterMath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof virtualMachineListener ) ((virtualMachineListener)listener).exitMath(this);
		}
	}

	public final MathContext math() throws RecognitionException {
		return math(0);
	}

	private MathContext math(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MathContext _localctx = new MathContext(_ctx, _parentState);
		MathContext _prevctx = _localctx;
		int _startState = 24;
		enterRecursionRule(_localctx, 24, RULE_math, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(160);
			term(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(167);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MathContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_math);
					setState(162);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(163);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					setState(164);
					math(3);
					}
					} 
				}
				setState(169);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
